# nexo-2026

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE_PLAN_v0.2.0.md  deny.toml  docker-compose.staging.yml
.github/workflows/: rust.yml  staging-security.yml
benches/: engine_bench.rs  http_bench.rs  security_bench.rs
docs/: NEXO_BITCOIN_LOGISTICS_EXPERIMENT_V0.md  NEXO_BITCOIN_LOGISTICS_EXPERIMENT_V0_TECHNICAL_MINIMUM.md  NEXO_COLLECTIVE_FINALIZATION_PLAN_V0.md  NEXO_INTERFACE_V0_BASELINE.md  NEXO_INTERFACE_V0_ONLINE_DEPLOYMENT_PLAN.md  NEXO_INTERFACE_V0_OPERATOR_GUIDE.md  NEXO_INTERFACE_V0_PLAN.md  NEXO_INTERFACE_V0_READINESS_CHECKLIST.md  NEXO_MESH_ARCHITECTURE_NOTES.md  NEXO_MESH_NODE_AND_SYNC_CONTRACT.md  NEXO_MESH_NODE_IDENTITY_AND_LIFECYCLE.md  NEXO_MESH_PRE_IMPLEMENTATION_DECISIONS.md  NEXO_PRODUCT_HYPOTHESIS_V0.md  NEXO_WITNESS_DRIVEN_SYNC_V0.md  NEXO_WITNESS_LAYER.md  OPERATIONAL_FLOW.md  SECURITY_OPERATIONS.md  systemd.md
examples/: audit_inspection_flow.md  basic_decision_flow.md  flagged_decision_flow.md
fixtures/: audit_rust_blake3.jsonl  audit_rust_hybrid.jsonl  audit_rust_shake512.jsonl  audit_sample.jsonl  audit_sample_blocked.jsonl
julia/: Manifest.toml  Project.toml  flow_observer.jl  observe_decision_cycle_v0.jl  observe_loop.jl  observe_state.jl  observe_sync_economics.jl  plca_bridge.jl  test_decision_cycle_v0_observer.jl  test_flow_observer.jl  test_integration.jl  test_plca.jl  test_sync_economics_observer.jl
julia/test/: runtests.jl
nexo_ui/: README.md  app.rb  core_adapter.rb
nexo_ui/public/: app.js  styles.css
nexo_ui/test/: app_config_test.rb  app_surface_test.rb  core_adapter_test.rb
nexo_ui/views/: index.erb
scripts/: check_readme_consistency.sh  demo_decision_flow.sh  demo_decision_flow_flagged.sh  demo_hybrid.sh  demo_p2p.sh  find_audit_artifact.sh  inspect_audit_artifact.sh  run_interface_v0_online.sh
scripts/staging/: gen_certs.sh  run_smoke.sh
src/: ai.rs  analyzer.rs  api.rs  audit_store.rs  chat.rs  cli.rs  discovery.rs  lib.rs  main.rs  message.rs  network_udp.rs  offline_store.rs  p2p_crypto.rs  profile.rs  relay_client.rs  relay_registry.rs  telemetry.rs
src/api/: auth.rs  errors.rs  rate_limit.rs  replay.rs  state.rs
src/audit/: hash.rs  mod.rs  record.rs
src/engine/: DECISION_TRACE_POLICY.md  evaluate.rs  mod.rs  trace.rs
src/mesh/: adapters.rs  errors.rs  mod.rs  policy.rs  types.rs
staging/nginx/: nginx.conf
staging/secrets/: client_pubkeys.json.example  hmac_secret.example
tests/: engine_boundaries.rs  network_udp_integration.rs
tools/zig/: audit_verify.zig  build.zig
tools/zig/src/: crypto.zig  main.zig  schema.zig  verify.zig
