[package]
name = "syntax-engine"
version = "1.6.1"
edition = "2021"
description = "Deterministic decision engine with cryptographic audit trail (BLAKE3)"
license = "MIT"
repository = "https://github.com/JoseSmurf/nexo-2026"
keywords = ["aml", "audit", "deterministic", "security", "compliance"]

[lib]
name = "syntax_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
