[package]
name = "syntax-engine"
version = "1.6.1"
edition = "2021"
description = "Deterministic decision engine with cryptographic audit trail (BLAKE3)"
license = "MIT"
repository = "https://github.com/JoseSmurf/nexo-2026"
keywords = ["aml", "audit", "deterministic", "security", "compliance"]

[lib]
name = "syntax_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower = { version = "0.5", features = ["util"] }
dashmap = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
aws-config = { version = "1.8", default-features = false, features = ["rustls"] }
aws-sdk-secretsmanager = { version = "1.95", default-features = false, features = ["rustls"] }

[dev-dependencies]
criterion = "0.5"
http-body-util = "0.1"

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "http_bench"
harness = false

[[bench]]
name = "security_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
